--- a/Suma2Lealtad/Views/ClientePrepago/FindBeneficiario.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/FindBeneficiario.cshtml
@@ -1,17 +1,16 @@
-﻿@model Suma2Lealtad.Models.Afiliado
+﻿@model Suma2Lealtad.Models.ClientePrepago
 
 @{
-    ViewBag.Title = "Filter";
+    ViewBag.Title = "FindBeneficiario";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 
 <div class="form-group">
 
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Crear Afiliación / Filtro de Búsqueda</h3>
+            <h3 class="panel-title">Prepago / Cliente / Crear Beneficiario / Filtro de Búsqueda</h3>
         </div>
 
         <div class="panel-body">
@@ -23,7 +22,7 @@
                 <br />
             </div>
 
-            <form action="@Url.Action("Find", "Afiliado")" name="form" method="post" onsubmit="return validarDocumento();">
+            <form action="@Url.Action("FindBeneficiario", "ClientePrepago")" name="form" method="post" onsubmit="return validarDocumento();">
 
                 <div class="editor-label col-md-4 control-label">
                     Número de Documento/Cédula :
@@ -45,6 +44,7 @@
                     <div class="col-md-12 col-btn">
                         <div class="pull-right">
                             <input type="submit" class="btn btn-success btn-lg" value="Buscar" />
+                            <a href="@Url.Action("FilterBeneficiarios", "ClientePrepago", new { id = Model.idCliente })" class="btn btn-danger btn-md">Regresar</a>
                         </div>
                     </div>
                 </div>
@@ -107,4 +107,3 @@
         span.appendChild(document.createTextNode("* Formato Número de Documento/Cédula Incorrecto. (V-12345678)"));
     }
 </script>
-
