--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -100,6 +100,16 @@
             });
         });
 
+        $('#Afiliado_cod_estado').change(function () {
+            $.getJSON('@Url.Action("/CiudadList/")' + $('#Afiliado_cod_estado').val(), function (data) {
+                var items = '<option value=" ">Seleccione una Ciudad</option>';
+                $.each(data, function (i, district) {
+                    items += "<option value='" + district.Value + "'>" + district.Text + "</option>";
+                });
+                $('#Afiliado_cod_ciudad').html(items);
+            });
+        });
+
         $('#cod_ciudad').change(function () {
             $.getJSON('@Url.Action("/MunicipioList/")' + $('#cod_ciudad').val(), function (data) {
                 var items = '<option value=" ">Seleccione un Municipio</option>';
@@ -110,6 +120,16 @@
             });
         });
 
+        $('#Afiliado_cod_ciudad').change(function () {
+            $.getJSON('@Url.Action("/MunicipioList/")' + $('#Afiliado_cod_ciudad').val(), function (data) {
+                var items = '<option value=" ">Seleccione un Municipio</option>';
+                $.each(data, function (i, record) {
+                    items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
+                });
+                $('#Afiliado_cod_municipio').html(items);
+            });
+        });
+        
         $('#cod_municipio').change(function () {
             $.getJSON('@Url.Action("/ParroquiaList/")' + $('#cod_municipio').val(), function (data) {
                 var items = '<option value=" ">Seleccione una Parroquia</option>';
@@ -117,6 +137,16 @@
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
                 });
                 $('#cod_parroquia').html(items);
+            });
+        });
+
+        $('#Afiliado_cod_municipio').change(function () {
+            $.getJSON('@Url.Action("/ParroquiaList/")' + $('#Afiliado_cod_municipio').val(), function (data) {
+                var items = '<option value=" ">Seleccione una Parroquia</option>';
+                $.each(data, function (i, record) {
+                    items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
+                });
+                $('#Afiliado_cod_parroquia').html(items);
             });
         });
 
@@ -130,7 +160,16 @@
             });
         });
 
-
+        $('#Afiliado_cod_parroquia').change(function () {
+            $.getJSON('@Url.Action("/UrbanizacionList/")' + $('#Afiliado_cod_parroquia').val(), function (data) {
+                var items = '<option value=" ">Seleccione una Urbanización</option>';
+                $.each(data, function (i, record) {
+                    items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
+                });
+                $('#Afiliado_cod_urbanizacion').html(items);
+            });
+        });
+        
        $.validator.addMethod("regex", function(value, element, regexpr) {          
          return regexpr.test(value);
        }, "Ingrese un valor correcto.");
