Operaciones del menú Clientes Completas

--- a/Suma2Lealtad/Views/ClientePrepago/CreateOrdenRecargaArchivo.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/CreateOrdenRecargaArchivo.cshtml
@@ -1,7 +1,6 @@
-﻿@model IList<Suma2Lealtad.Models.CompanyAfiliadoRecarga>
-
+﻿@model IList<Suma2Lealtad.Models.DetalleOrdenRecargaPrepago>
 @{
-    ViewBag.Title = "Recargas";
+    ViewBag.Title = "CreateOrdenRecargaArchivo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -16,7 +15,7 @@
     }
 
     .table tbody tr.active td {
-        background-color: #1C2B2B; /*#476B6B #29A329;*/
+        background-color: #1C2B2B;
         color: white;
     }
 </style>
@@ -27,8 +26,7 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Prepago / Compañia / Beneficiarios / Recargas</h3>
-            @*<input type="submit" class="btn btn-success btn-md" value="Regresar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />*@
+            <h3 class="panel-title">Prepago / Compañia / Beneficiarios / Confirmación Recarga Masiva </h3>
         </div>
 
         <div class="panel-body">
@@ -62,25 +60,24 @@
                 <br />
             </div>
 
-            <form id="commentForm" method="post" action="@Url.Action("Recargas", "CompanyPrepago")" class="form-horizontal" onsubmit="return verificarforma();">
+            <form id="commentForm" method="post" action="@Url.Action("Recargas", "CompanyPrepago")" class="form-horizontal">
 
-            <div class="col-md-12 col-tabla-btn">
+                <div class="col-md-12 col-tabla-btn">
                 <div class="pull-right">
                         @*<a href="@Url.Action("", "")" class="btn btn-success btn-md">Órdenes de Recarga</a>
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Individual</a>
                         <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Masiva</a>
                         <a href="@Url.Action("Filter", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>*@
-                        <a href="@Url.Action("FilterBeneficiariosRecargas", "CompanyPrepago", new { companyid = Model.FirstOrDefault().companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
+                        @*<a href="@Url.Action("FilterBeneficiariosRecargas", "CompanyPrepago", new { companyid = Model.FirstOrDefault().companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>*@
                         @*<a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Cancelar</a>*@
                         <a href="@Url.Action("Index", "CompanyPrepago", new { rif = Model.FirstOrDefault().rif })" class="btn btn-danger btn-md">Regresar</a>
                 </div>
             </div>
 
-            <div class="editor-field col-md-6">
-                <br />
-            </div>
+                <div class="editor-field col-md-6">
+                    <br />
+                </div>
 
-                @*<table class="table table-striped custab">*@
                 <table id="beneficiarios" class="table table-hover">
 
                     <thead>
@@ -89,6 +86,7 @@
                             <th>Número de Documento/Cédula</th>
                             <th>Nombre</th>
                             <th>Monto</th>
+                            <th>Estatus</th>
                         </tr>
                     </thead>
 
@@ -97,11 +95,12 @@
                         @for (int i = 0; i < Model.Count; i++)
                         {     
                             <tr data-row-key="@Model[i].Afiliadoid">
-                                
+
                                 @Html.HiddenFor(modelItem => Model[i].companyid)
                                 @Html.HiddenFor(modelItem => Model[i].rif)
                                 @Html.HiddenFor(modelItem => Model[i].Afiliadoid)
-                                
+                                @Html.HiddenFor(modelItem => Model[i].MontoRecarga)
+
                                 <td>
                                     @Html.DisplayFor(modelItem => Model[i].type, new { @class = "form-control" })
                                 </td>
@@ -115,8 +114,11 @@
                                 </td>
 
                                 <td class="text-right">
-                                    @Html.TextBoxFor(modelItem => Model[i].MontoRecarga, new { @class = "form-control Monto" })
-                                    <span id="field_@Model[i].Afiliadoid"></span>
+                                    @Html.DisplayFor(modelItem => Model[i].MontoRecarga, new { @class = "form-control Monto" })
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => Model[i].estatus, new { @class = "form-control" })
                                 </td>
                             </tr>                 
                         }
@@ -149,7 +151,7 @@
                 <div class="col-md-12 col-tabla-btn">
                     <div class="pull-right">
                         <input type="submit" class="btn btn-success btn-md" value="Procesar" />
-                        @*<a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.FirstOrDefault().companyid })" class="btn btn-danger btn-md">Regresar</a>*@
+                        @*<a href="@Url.Action("Index", "CompanyPrepago", new { rif = Model.FirstOrDefault().rif })" class="btn btn-danger btn-md">Regresar</a>*@
                     </div>
                 </div>
 
@@ -166,14 +168,9 @@
 
 <script src="~/Scripts/jquery-2.1.3.min.js"></script>
 <script>
-    var Myinterval = setInterval(function () {
-        ValidarMontos()
-    }, 500);
-
-    function ValidarMontos() {
+    $(document).ready(function () {
         var TotalRecargas = 0;
         var MontoTotalRecargas = 0;
-        var resultado = true;
 
         $("#beneficiarios tbody tr").each(function (index) {
             var RegExPattern = /^(\d){2,10}$/;
@@ -182,64 +179,26 @@
             var campo4 = 0;
             $(this).children("td").each(function (index2) {
                 switch (index2) {
-                    //case 0: campo1 = $(this).text();
-                    //    break;
-                    //case 1: campo2 = $(this).text();
-                    //    break;
-                    //case 2: campo3 = $(this).text();
-                    //    break;
-                    case 3: campo4 = $(this).find('.Monto').val();
+                    case 0:
+                        campo1 = $(this).text();
+                        break;
+                    case 1:
+                        campo2 = $(this).text();
+                        break;
+                    case 2:
+                        campo3 = $(this).text();
+                        break;
+                    case 3:
+                        campo4 = $(this).text();
                         break;
                 }
             });
-            LimpiarSpanMessage('field_' + idrow);
-            if (campo4 == 0) {
-                spanMessage('field_' + idrow, '* No incluye recarga');
-            }
-            else if (RegExPattern.test(campo4) == false) {
-                spanMessage('field_' + idrow, '* Monto invalido (' + campo4 + ')');
-                resultado = false;
-            }
-            else if (campo4 > 5000) {
-                spanMessage('field_' + idrow, '* El monto excede el valor máximo permitido (500)');
-                resultado = false;
-            }
-            else {
+            if (parseInt(campo4) != 0) {
                 TotalRecargas = TotalRecargas + 1;
                 MontoTotalRecargas = MontoTotalRecargas + parseInt(campo4);
+                document.getElementById('TotalRecargas').value = TotalRecargas;
+                document.getElementById('MontoTotalRecargas').value = MontoTotalRecargas;
             }
-            document.getElementById('TotalRecargas').value = TotalRecargas;
-            document.getElementById('MontoTotalRecargas').value = MontoTotalRecargas;
         });
-        return resultado;
-    }
-
-    function spanMessage(idelemento, mensaje) {
-        var span = document.getElementById(idelemento);
-        while (span.firstChild) {
-            span.removeChild(span.firstChild);
-        }
-        span.appendChild(document.createTextNode(mensaje));
-    }
-
-    function LimpiarSpanMessage(idelemento) {
-        var span = document.getElementById(idelemento);
-        while (span.firstChild) {
-            span.removeChild(span.firstChild);
-        }
-    }
-
-    function verificarforma() {
-        if (!ValidarMontos()) {
-            alert("Hay campos invalidos, verifique.");
-            return false;
-        }
-        if (document.getElementById('MontoTotalRecargas').value == 0) {
-            alert("Debe incluir al menos una recarga.");
-            return false;
-        }
-        return true;
-    }
+    });
 </script>
-
-
