--- a/Suma2Lealtad/Views/ClientePrepago/IndexOrdenes.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/IndexOrdenes.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<Suma2Lealtad.Models.OrdenRecargaPrepago>
-
 @{
     ViewBag.Title = "Ordenes";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -39,104 +38,108 @@
             </div>
 
             <div class="editor-label col-md-4 control-label">
-                    Cliente :
-                </div>
+                Cliente :
+            </div>
 
-                <div class="editor-field col-md-6">
-                    @Html.TextBoxFor(model => model.First().Cliente.nameCliente, new { @class = "form-control", @readonly = "true" })
-                </div>
+            <div class="editor-field col-md-6">
+                @Html.TextBoxFor(model => model.First().Cliente.nameCliente, new { @class = "form-control", @readonly = "true" })
+            </div>
 
-                <div class="editor-label col-md-4 control-label">
-                    RIF :
-                </div>
-                <div class="editor-form col-md-6">
-                    @Html.TextBoxFor(model => model.First().Cliente.rifCliente, new { @class = "form-control", @readonly = "true" })
-                </div>
-                <div class="editor-label col-md-4 control-label">
-                    Teléfono :
-                </div>
-                <div class="editor-form col-md-6">
-                    @Html.TextBoxFor(model => model.First().Cliente.phoneCliente, new { @class = "form-control", @readonly = "true" })
-                </div>
+            <div class="editor-label col-md-4 control-label">
+                RIF :
+            </div>
+            <div class="editor-form col-md-6">
+                @Html.TextBoxFor(model => model.First().Cliente.rifCliente, new { @class = "form-control", @readonly = "true" })
+            </div>
+            <div class="editor-label col-md-4 control-label">
+                Teléfono :
+            </div>
+            <div class="editor-form col-md-6">
+                @Html.TextBoxFor(model => model.First().Cliente.phoneCliente, new { @class = "form-control", @readonly = "true" })
+            </div>
 
-                <div class="editor-label col-md-4 control-label"></div>
-                <div class="editor-field col-md-8">
-                    <br />
-                </div>
+            <div class="editor-label col-md-4 control-label"></div>
+            <div class="editor-field col-md-8">
+                <br />
+            </div>
 
-                <table id="ordenes" class="table table-hover">
+            <table id="ordenes" class="table table-hover">
 
-                    <thead>
-                        <tr>
-                            <th>Nro. de Orden</th>
-                            <th>Fecha de Creación</th>
-                            <th>Estatus</th>
-                            <th>Monto Total</th>
-                            <th class="text-center"></th>
-                            <th class="text-center"></th>
-                        </tr>
-                    </thead>
+                <thead>
+                    <tr>
+                        <th>Nro. de Orden</th>
+                        <th>Fecha de Creación</th>
+                        <th>Estatus</th>
+                        <th>Comentarios</th>
+                        <th>Monto Total</th>
+                        <th class="text-center"></th>
+                        <th class="text-center"></th>
+                    </tr>
+                </thead>
 
-                    <tbody>
-                        @if (Model.First().id != 0)
-                        {
-                            foreach (var item in Model)
-                            {                            
-                            <tr data-row-key="@item.id" >
+                <tbody>
+                    @if (Model.First().id != 0)
+                    {
+                        foreach (var item in Model)
+                        {                            
+                        <tr data-row-key="@item.id" >
 
-                                @Html.HiddenFor(modelItem => item.statusOrden)
+                            @Html.HiddenFor(modelItem => item.statusOrden)
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.id)
-                                </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.id)
+                            </td>
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.creationdateOrden)
-                                </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.creationdateOrden)
+                            </td>
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.statusOrden)
-                                </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.statusOrden)
+                            </td>
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.montoOrden)
-                                </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.tipoOrden)
+                            </td>
 
-                                <td>
-                                    <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new { idCliente = item.Cliente.idCliente, id = item.id })" class="btn btn-success btn-sm" >
-                                        <span class="glyphicon glyphicon-zoom-in"></span>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.montoOrden)
+                            </td>
+
+                            <td>
+                                <a href="@Url.Action("DetalleOrden", "ClientePrepago", new { id = item.Cliente.idCliente, idOrden = item.id })" class="btn btn-success btn-sm" >
+                                    <span class="glyphicon glyphicon-zoom-in"></span>
+                                </a>
+                            </td>
+
+                            <td>
+                                @{if (item.statusOrden == "Aprobada")
+                                  {
+                                    <a href="@Url.Action("ProcesarOrden", "ClientePrepago", new { id = item.Cliente.idCliente, idOrden = item.id })" class="btn btn-info btn-sm" >
+                                        <span class="glyphicon glyphicon-usd"></span>
                                     </a>
-                                </td>
+                                  }
+                                }
 
-                                <td>
-                                    @{if (item.statusOrden == "Aprobada")
-                                      {
-                                        <a href="@Url.Action("ProcesarOrden", "CompanyPrepago", new { idCliente = item.Cliente.idCliente, id = item.id })" class="btn btn-info btn-sm" >
-                                            <span class="glyphicon glyphicon-usd"></span>
-                                        </a>
-                                      }
-                                    }
+                            </td>
 
-                                </td>
-
-
-                            </tr>                 
-                            }
+                        </tr>                 
                         }
-                    </tbody>
+                    }
+                </tbody>
 
-                </table>
+            </table>
 
-                <div class="col-md-12 col-btn">
+            <div class="col-md-12 col-btn">
                 <div class="pull-right">
                     <a href="@Url.Action("FilterOrdenes", "ClientePrepago", new { id = Model.First().Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
                 </div>
             </div>
 
-            </div>
-            <!-- panel-body -->
-
         </div>
-        <!-- panel -->
+        <!-- panel-body -->
 
     </div>
+    <!-- panel -->
+
+</div>
