--- a/Suma2Lealtad/Views/ClientePrepago/Filter.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/Filter.cshtml
@@ -34,7 +34,7 @@
                <div class="form-group">
                     <div class="col-md-12 col-btn">
                         <div class="pull-right">
-                            <input type="submit" class="btn btn-success btn-md" value="Buscar Cliente" />
+                            <input type="submit" class="btn btn-success btn-md" value="Buscar" />
                         </div>
                     </div>
                 </div>
