--- a/Suma2Lealtad/Views/OrdenRecargaPrepago/DetalleOrden.cshtml
+++ b/Suma2Lealtad/Views/OrdenRecargaPrepago/DetalleOrden.cshtml
@@ -37,7 +37,7 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Prepago / Cliente / Ordenes de Recarga / Detalle de la Orden</h3>
+            <h3 class="panel-title">Prepago / Ordenes de Recarga / Detalle de la Orden</h3>
         </div>
 
         <div class="panel-body">
