--- a/Suma2Lealtad/Views/OrdenRecargaPrepago/Create.cshtml
+++ b/Suma2Lealtad/Views/OrdenRecargaPrepago/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IList<Suma2Lealtad.Models.DetalleOrdenRecargaPrepago>
 @{
-    ViewBag.Title = "CreateOrdenRecarga";
+    ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -26,7 +26,7 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Prepago / Cliente / Órdenes de Recarga / Crear Orden de Recarga</h3>
+            <h3 class="panel-title">Prepago / Órdenes de Recarga / Crear Orden de Recarga</h3>
         </div>
 
         <div class="panel-body">
@@ -38,7 +38,7 @@
                 <br />
             </div>
 
-            <form id="commentForm" method="post" action="@Url.Action("CreateOrdenRecarga", "ClientePrepago", new { id = Model.First().idCliente })" class="form-horizontal" onsubmit="return verificarforma();">
+            <form id="commentForm" method="post" action="@Url.Action("Create", "OrdenRecargaPrepago", new { idCliente = Model.First().idCliente })" class="form-horizontal" onsubmit="return verificarforma();">
 
                 <div class="editor-label col-md-4 control-label">
                     Cliente :
@@ -261,3 +261,5 @@
         return true;
     }
 </script>
+
+
